...
            "value": "Voy a responder"
          }
        },
        "pt": {
          "stringUnit": {
            "state": "translated",
            "value": "Vou responder"
          }
        }
      }
    },
    "If any of this is heavier than a question": {
      "localizations": {
...
            "value": "Ver cómo se ve"
          }
        },
        "pt": {
          "stringUnit": {
            "state": "translated",
            "value": "Ver como fica"
          }
        }
      }
    },
    "Send it to me daily": {
      "localizations": {
...
            "value": "Saltar las cuatro"
          }
        },
        "pt": {
          "stringUnit": {
            "state": "translated",
            "value": "Pular as quatro"
          }
        }
      }
    },
    "Skip this one": {
      "localizations": {
...
            "value": "Palabra de hoy"
          }
        },
        "pt": {
          "stringUnit": {
            "state": "translated",
            "value": "Palavra de hoje"
          }
        }
      }
    },
    "Tomorrow morning you get": {
      "localizations": {
...
